{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 86,
  "lineage": "7a9fced5-368d-756f-0605-fc4bf55d36c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dedbff7e5f4be38",
            "association_id": "eipassoc-0e2148cfa5f04ec4e",
            "domain": "vpc",
            "id": "eipalloc-00dedbff7e5f4be38",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0a191818c542b575d",
            "private_dns": "ip-10-0-1-139.eu-west-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-54-76-137-91.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.76.137.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:internet-gateway/igw-09b731ffb9cb037ab",
            "id": "igw-09b731ffb9cb037ab",
            "owner_id": "533267130709",
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:loadbalancer/app/ecs-alb/680eeffbc46365e3",
            "arn_suffix": "app/ecs-alb/680eeffbc46365e3",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-638370155.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:loadbalancer/app/ecs-alb/680eeffbc46365e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ace7a9c4fd9f9de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c7ce74ce68a601c"
              },
              {
                "subnet_id": "subnet-097c6a242ba457e7f"
              }
            ],
            "subnets": [
              "subnet-05c7ce74ce68a601c",
              "subnet-097c6a242ba457e7f"
            ],
            "vpc_id": "vpc-070e52e3302133edc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:listener/app/ecs-alb/680eeffbc46365e3/55dd1ca905bc57fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:targetgroup/ecs-tg/7d364e8d84bd2388",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:listener/app/ecs-alb/680eeffbc46365e3/55dd1ca905bc57fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:loadbalancer/app/ecs-alb/680eeffbc46365e3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:listener/app/ecs-alb/680eeffbc46365e3/2f72ebb1cac7a3c1",
            "certificate_arn": "arn:aws:acm:eu-west-1:533267130709:certificate/74be48f4-b65a-43ff-a50f-dda4e1f93a7a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:targetgroup/ecs-tg/7d364e8d84bd2388",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:listener/app/ecs-alb/680eeffbc46365e3/2f72ebb1cac7a3c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:loadbalancer/app/ecs-alb/680eeffbc46365e3",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:targetgroup/ecs-tg/7d364e8d84bd2388",
            "arn_suffix": "targetgroup/ecs-tg/7d364e8d84bd2388",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533267130709:targetgroup/ecs-tg/7d364e8d84bd2388",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dedbff7e5f4be38",
            "association_id": "eipassoc-0e2148cfa5f04ec4e",
            "connectivity_type": "public",
            "id": "nat-0fc2bc588021c7134",
            "network_interface_id": "eni-0a191818c542b575d",
            "private_ip": "10.0.1.139",
            "public_ip": "54.76.137.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c7ce74ce68a601c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:network-acl/acl-0cbf08f431872eb1b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cbf08f431872eb1b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "533267130709",
            "subnet_ids": [
              "subnet-05c7ce74ce68a601c"
            ],
            "tags": {
              "Name": "PublicNACL"
            },
            "tags_all": {
              "Name": "PublicNACL"
            },
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02aa5998e33c75991",
            "network_acl_id": "acl-0cbf08f431872eb1b",
            "subnet_id": "subnet-05c7ce74ce68a601c"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:route-table/rtb-0352a871bc73e1fd7",
            "id": "rtb-0352a871bc73e1fd7",
            "owner_id": "533267130709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b731ffb9cb037ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:route-table/rtb-003a79fc017ae11b5",
            "id": "rtb-003a79fc017ae11b5",
            "owner_id": "533267130709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc2bc588021c7134",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0059ae601394297a7",
            "route_table_id": "rtb-0352a871bc73e1fd7",
            "subnet_id": "subnet-05c7ce74ce68a601c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc8a83845ad70d6",
            "route_table_id": "rtb-003a79fc017ae11b5",
            "subnet_id": "subnet-097c6a242ba457e7f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:security-group/sg-00ace7a9c4fd9f9de",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ace7a9c4fd9f9de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "533267130709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:security-group/sg-0e7ab445517457054",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7ab445517457054",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "533267130709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:security-group/sg-0c1dff309e430d7a6",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1dff309e430d7a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "533267130709",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:subnet/subnet-05c7ce74ce68a601c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c7ce74ce68a601c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267130709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1"
            },
            "tags_all": {
              "Name": "Subnet1"
            },
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:subnet/subnet-097c6a242ba457e7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097c6a242ba457e7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267130709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2"
            },
            "tags_all": {
              "Name": "Subnet2"
            },
            "vpc_id": "vpc-070e52e3302133edc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533267130709:vpc/vpc-070e52e3302133edc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020f495ed9cdfa9f2",
            "default_route_table_id": "rtb-00ffc601a36622b58",
            "default_security_group_id": "sg-08d53aa4edca05c68",
            "dhcp_options_id": "dopt-022c2351ee26c2e31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070e52e3302133edc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ffc601a36622b58",
            "owner_id": "533267130709",
            "tags": {
              "Name": "MainVPC"
            },
            "tags_all": {
              "Name": "MainVPC"
            }
          }
        }
      ]
    }
  ]
}